(fix-overflow)

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -2,9 +2,12 @@
 
 *{
     padding: 0;
-    margin: 0;
-    
+    margin: 0;   
 }
+
+html, body {
+    overflow-x:hidden 
+  } 
 
 .section-1{
     min-height: 100vh;
